# fullstack-project-tracker-django

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  settings.py  urls.py
backend/projects/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_projectlog.py  0003_projectcomment.py  0004_alter_project_options_alter_project_id_and_more.py
backend/projects/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py  test_views_comments.py  test_views_projects.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  utils.ts
frontend/src/api/: axiosInstance.ts  client.ts
frontend/src/api/core/: auth.ts  project-comments.ts  project-logs.ts  projects.ts  users.ts
frontend/src/api/models/: auth.ts  pagination.ts  project.ts  projectComment.ts  projectLog.ts  projectStatus.ts  user.ts
frontend/src/api/types/: project.ts  projectStatus.ts
frontend/src/components/: MainLayout.tsx  ProjectList.tsx
frontend/src/components/Auth/: AuthContext.tsx
frontend/src/components/Comments/: ProjectCommentCard.tsx  ProjectCommentForm.tsx  ProjectCommentList.tsx
frontend/src/components/Common/: Header.tsx  MainContent.tsx
frontend/src/components/Pages/: LoginPage.tsx  ProjectCreatePage.tsx  ProjectListPage.tsx  ProjectPage.tsx  ProjectsPage.tsx
frontend/src/config/: api.ts  env.ts  routes.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: projects.tsx  router.tsx
(+9 files in other folders)
