[project]
name = "fullstack-project-tracker-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-cors-headers>=4.9.0",
    "django-stubs>=6.0.3",
    "djangorestframework>=3.17.1",
    "drf-nested-routers>=0.95.0",
    "pygments>=2.20.0",
]

[dependency-groups]
dev = [
    "httpie>=3.2.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-lazy-fixture>=0.6.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["test_*.py", "*_tests.py", "tests_*.py", "tests.py"]
